--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <nav class="navbar navbar-inverse">
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -8,13 +8,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">NG RANDO</a>
+        <a class="navbar-brand" [routerLink]="['/']">Regista</a>
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a [routerLink]="['/']">Accueil</a></li>
-          <li><a [routerLink]="['/hikes']">Randonnées</a></li>
-          <li><a [routerLink]="['/contact']">Contact</a></li>
+          <li [routerLinkActive]="['active']"><a [routerLink]="['/home']">Accueil</a></li>
+          <li [routerLinkActive]="['active']"><a [routerLink]="['/hikes']">Randonnées</a></li>
+          <li [routerLinkActive]="['active']"><a [routerLink]="['/contact']">Contact</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
