Add animations on the main div + Input,Output

--- a/src/app/hike/hike-list.component.html
+++ b/src/app/hike/hike-list.component.html
@@ -5,8 +5,8 @@
 </div>
 
 <div *ngFor="let hike of hikes | hikeFilter:searchTerm">
-  <a [routerLink]="['/hike', hike.name]">{{ hike.name | uppercase }}</a>
-  <br>
-  {{ hike.description }}
-  <hr>
+    <br>
+    <hike-summary [hike]="hike" (addHikeAsFavourite)="addToMyTodoHike($event)"></hike-summary>
 </div>
+
+
