--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,7 @@
         <ul class="nav navbar-nav">
           <li [routerLinkActive]="['active']"><a [routerLink]="['/home']">Accueil</a></li>
           <li [routerLinkActive]="['active']"><a [routerLink]="['/hikes']">Randonnées</a></li>
+          <li [routerLinkActive]="['active']"><a [routerLink]="['/map']">Map</a></li>
           <li [routerLinkActive]="['active']"><a [routerLink]="['/contact']">Contact</a></li>
         </ul>
       </div><!--/.nav-collapse -->
