--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -2,30 +2,76 @@
     <h2>Carte de notre prochaine randonnée</h2>
 
     <div>
-        <input type="text" 
-               value="" 
-               placeholder="Votre point de départ" 
+        <input type="text"
+               value=""
+               placeholder="Votre point de départ"
                [(ngModel)]="startingPoint"
                class="start"
         >
         <button (click)="geocode()" class="btn btn-danger">Localiser</button>
+        <button (click)="reset()" class="btn btn-primary">Reset</button>
     </div>
+
+    <br>
     <br>
 
+    <div>
+
+      <form (submit)="addMarkerByCoords(form.value)" #form="ngForm">
+        <label for="markerByCoordsLat">Latitude</label>
+        <input type="text" name="markerByCoordsLat" ngModel id="markerByCoordsLat">
+
+        <label for="markerByCoordsLng">Longitude</label>
+        <input type="text" name="markerByCoordsLng" ngModel id="markerByCoordsLng">
+
+        <button type="submit">Envoyer</button>
+      </form>
+
+    </div>
+
+    <br>
+
+    <pre>{{ form.value | json }}</pre>
+
+
     <sebm-google-map [latitude]="lat" [longitude]="lng">
-        <sebm-google-map-marker 
-            [latitude]="lat" 
+        <sebm-google-map-marker
+            [latitude]="lat"
             [longitude]="lng"
             [markerDraggable]="true"
             (dragEnd)="onCoordMarkerDropped($event)"
         >
         </sebm-google-map-marker>
         <sebm-google-map-marker *ngFor="let m of markers"
-            [latitude]="m.lat" 
+            [latitude]="m.lat"
             [longitude]="m.lng"
             [markerDraggable]="m.draggable"
         >
         </sebm-google-map-marker>
+        <sebm-google-map-marker *ngFor="let m of markers"
+            [latitude]="m.lat"
+            [longitude]="m.lng"
+            [markerDraggable]="m.draggable"
+            (dragEnd) = "updatePolyline($event)"
+        >
+        </sebm-google-map-marker>
+        <sebm-google-map-marker *ngFor="let m of markersFromCoords"
+            [latitude]="m.lat"
+            [longitude]="m.lng"
+            [markerDraggable]="m.draggable"
+        >
+        </sebm-google-map-marker>
+
+        <sebm-google-map-polyline>
+          <sebm-google-map-polyline-point
+            *ngFor="let point of pointsForPolyline"
+            [latitude]="point.lat"
+            [longitude]="point.lng"
+          >
+
+          </sebm-google-map-polyline-point>
+        </sebm-google-map-polyline>
+
     </sebm-google-map>
 
     <div *ngIf = "markerWasDroppped">
